--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.20.0",
     "@ant-design/icons": "^5.3.7",
+    "@ckeditor/ckeditor5-build-classic": "^42.0.1",
+    "@ckeditor/ckeditor5-build-decoupled-document": "^42.0.1",
+    "@ckeditor/ckeditor5-react": "^8.0.0",
     "@react-native-firebase/app": "^20.1.0",
     "@react-native-firebase/auth": "^20.1.0",
     "@react-native-firebase/firestore": "^20.1.0",
@@ -18,6 +21,8 @@
     "@react-native-firebase/storage": "^20.1.0",
     "antd": "^5.18.1",
     "firebase": "^10.12.2",
+    "jodit": "^4.2.27",
+    "jodit-react": "^4.1.2",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
