--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-firebase/firestore": "^20.1.0",
     "@react-native-firebase/messaging": "^20.1.0",
     "@react-native-firebase/storage": "^20.1.0",
+    "@tinymce/tinymce-react": "^5.1.1",
     "antd": "^5.18.1",
     "ckeditor5": "^42.0.2",
     "firebase": "^10.12.2",
@@ -29,12 +30,14 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-image-file-resizer": "^0.4.8",
-    "react-native-youtube-iframe": "^2.3.0"
+    "react-native-youtube-iframe": "^2.3.0",
+    "tinymce": "^7.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/tinymce": "^4.6.9",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "typescript": "^5"
